src/test/ui/mismatched_types/method-help-unsatisfied-bound.stderr
error[E0599]: no method named `unwrap` found for type `std::result::Result<(), Foo>` in the current scope
   --> $DIR/method-help-unsatisfied-bound.rs:15:7
    |
15  |     a.unwrap();
    |       ^^^^^^
    | 
   ::: /checkout/src/libcore/result.rs
    |
256 | pub enum Result<T, E> {
    | --------------------- method `unwrap` not found here
    |
    = note: the method `unwrap` exists but the following trait bounds were not satisfied:
            `Foo : std::fmt::Debug`

error: aborting due to previous error

